# Score-old

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  build.rb  buildWithSupport.rb  install.rb  supportUpdate.rb
extensions/Automation/: Automation.yml  CMakeLists.txt
extensions/Automation/Automation.xcodeproj/: project.pbxproj
extensions/Automation/includes/: Automation.h  Curve.h
extensions/Automation/source/: Automation.cpp  Curve.cpp
extensions/Interval/: CMakeLists.txt  Interval.yml
extensions/Interval/Interval.xcodeproj/: project.pbxproj
extensions/Interval/includes/: Interval.h
extensions/Interval/source/: Interval.cpp
extensions/Scenario/: CMakeLists.txt  Scenario.yml  Scenario_i386.yml
extensions/Scenario/Scenario.xcodeproj/: project.pbxproj
extensions/Scenario/gecode/: driver.hh  flatzinc.hh  float.hh  gist.hh  int.hh  iter.hh  kernel.hh  minimodel.hh  search.hh  set.hh  support.hh
extensions/Scenario/gecode/driver/: options.hpp  script.hpp
extensions/Scenario/gecode/flatzinc/: ast.hh  parser.hh  plugin.hh  registry.hh  varspec.hh
extensions/Scenario/gecode/float/: arithmetic.hh  array-traits.hpp  array.hpp  branch.hh  exception.hpp  limits.hpp  linear.hh  nextafter.hpp  num.hpp  rel.hh  rounding.hpp  transcendental.hh  trigonometric.hh  val.hpp  var-imp.hpp  view.hpp
extensions/Scenario/gecode/float/arithmetic/: div.hpp  min-max-channel.hpp  mult.hpp  pow-nroot.hpp  sqr-sqrt-abs.hpp
extensions/Scenario/gecode/float/branch/: activity.hpp  afc.hpp  assign.hpp  merit.hpp  traits.hpp  val-commit.hpp  val-sel.hpp  val.hpp  var.hpp
extensions/Scenario/gecode/float/linear/: nary.hpp
extensions/Scenario/gecode/float/rel/: eq.hpp  lq-le.hpp  nq.hpp
extensions/Scenario/gecode/float/transcendental/: exp-log.hpp
extensions/Scenario/gecode/float/trigonometric/: asinacos.hpp  sincos.hpp  tanatan.hpp
extensions/Scenario/gecode/float/var/: float.hpp  print.hpp
extensions/Scenario/gecode/float/var-imp/: delta.hpp  float.hpp
extensions/Scenario/gecode/float/view/: float.hpp  minus.hpp  offset.hpp  print.hpp  rel-test.hpp  scale.hpp
extensions/Scenario/gecode/gist/: gist.hpp  layoutcursor.hpp  node.hh  node.hpp  nodecursor.hh  nodecursor.hpp  nodestats.hh  preferences.hh  qtgist.hh  stopbrancher.hh  treecanvas.hh  visualnode.hh  visualnode.hpp
extensions/Scenario/gecode/int/: arithmetic.hh  array.hpp  bool.hh  branch.hh  cumulative.hh  div.hh  div.hpp  dom.hh  exception.hpp  extensional.hh  int-set-1.hpp  int-set-2.hpp  ldsb.hh  limits.hpp  linear.hh  member.hh  no-overlap.hh  propagator.hpp  reify.hpp  rel.hh  support-values.hh  support-values.hpp  task.hh  var-imp.hpp  view.hpp
extensions/Scenario/gecode/int/arithmetic/: abs.hpp  divmod.hpp  math.hpp  max.hpp  mult.hpp  nroot.hpp  pow-ops.hpp  pow.hpp
extensions/Scenario/gecode/int/bool/: clause.hpp  eq.hpp  ite.hpp  or.hpp
extensions/Scenario/gecode/int/branch/: activity.hpp  afc.hpp  assign.hpp  merit.hpp  ngl.hpp  traits.hpp  val-commit.hpp  val-sel.hpp  val.hpp  var.hpp  view-values.hpp
extensions/Scenario/gecode/int/channel/: dom.hpp  link-multi.hpp  val.hpp
extensions/Scenario/gecode/int/circuit/: base.hpp
extensions/Scenario/gecode/int/count/: rel.hpp
extensions/Scenario/gecode/int/cumulative/: basic.hpp  edge-finding.hpp  limits.hpp  overload.hpp  task.hpp  tree.hpp
extensions/Scenario/gecode/int/cumulatives/: val.hpp
extensions/Scenario/gecode/int/distinct/: bnd.hpp  graph.hpp  (+1 more)
extensions/Scenario/gecode/iter/: ranges-cache.hpp  ranges-inter.hpp  ranges-list.hpp  ranges-minus.hpp  ranges-scale.hpp  ranges-union.hpp  values-bitsetoffset.hpp  values-list.hpp  values-minus.hpp
extensions/Scenario/gecode/kernel/: activity.hpp  afc.hpp  allocators.hpp  archive.hpp  array.hpp  branch-tiebreak.hpp  branch-traits.hpp  branch-val.hpp  branch-var.hpp  brancher-merit.hpp  brancher-val-commit.hpp  brancher-val-sel-commit.hpp  brancher-val-sel.hpp  brancher-view-sel.hpp  brancher-view-val.hpp  brancher-view.hpp  core.hpp  exception.hpp  global-afc.hpp  memory-config.hpp  memory-manager.hpp  region.hpp  rnd.hpp  shared-array.hpp  var.hpp  view.hpp  wait.hh
extensions/Scenario/gecode/minimodel/: bool-expr.hpp  float-rel.hpp  int-rel.hpp  ldsb.hpp  optimize.hpp  set-expr.hpp
extensions/Scenario/gecode/search/: bab.hpp  cutoff.hpp  dfs.hpp  engine-base.hpp  exception.hpp  options.hpp  rbs.hpp  statistics.hpp  stop.hpp  support.hh  worker.hh
extensions/Scenario/gecode/set/: branch.hh  channel.hh  int.hh  ldsb.hh  rel.hh
extensions/Scenario/gecode/support/: bitset-base.hpp  bitset-offset.hpp  cast.hpp  config.hpp  dynamic-stack.hpp  heap.hpp  hw-rnd.hpp  random.hpp  thread.hpp
extensions/Scenario/includes/: CSP.h  CSPAsker.h  Scenario.h  ScenarioGraph.h  ScenarioSolver.h
extensions/Scenario/source/: CSP.cpp  Scenario.cpp  ScenarioGraph.cpp  ScenarioSolver.cpp
extensions/Scenario/source/CSP/: AllenRelation.cpp  AntPostRelation.cpp  AntPostRelation.hpp  BinaryRelation.cpp  BinaryRelation.hpp  BinaryTemporalRelation.cpp  BinaryTemporalRelation.hpp  CSP.cpp  CSP.hpp  CSPConstrainedVariable.hpp  CSPLinearConstraint.hpp  CSPold.cpp  CSPold.hpp  ConstrainedBox.cpp  ConstrainedBox.hpp  ConstrainedTemporalEntity.cpp  ConstrainedTemporalEntity.hpp  ControlPoint.cpp  ControlPoint.hpp  IntervalRelation.hpp  TriggerPoint.cpp  TriggerPoint.hpp
extensions/Scenario/source/Gecode/: customSpace.cpp  customSpace.hpp  gecode_headers.hpp  searchEngine.cpp  solver.cpp  solver.hpp  solver_wrap.cpp  solver_wrap.hpp
extensions/Scenario/source/PetriNet/: Arc.cpp  Arc.hpp  ExtendedInt.cpp  IllegalArgumentException.hpp  PetriNet.cpp  PetriNet.hpp  PetriNetItem.hpp  PetriNetNode.cpp  PetriNetNode.hpp  Place.cpp  Place.hpp  PriorityTransitionAction.cpp  PriorityTransitionAction.hpp  ThreadSafeList.cpp  ThreadSafeList.hpp  Token.cpp  Token.hpp  Transition.cpp  Transition.hpp  TransitionAction.cpp  TransitionAction.hpp  TransitionBitArray.cpp  TransitionBitArray.hpp
implementations/i-score/: CMakeLists.txt  Makefile  main.cpp
implementations/i-score/i-score.xcodeproj/: project.pbxproj
(+164 files in other folders)
